# toolbox

./: .gitignore  Dockerfile  dev-requirements.txt  docker-compose.yml  pyproject.toml  requirements.txt  update_deps.sh
.github/workflows/: docker-publish.yml
core/: celery.py  context_processors.py  settings.py  urls.py
core/static/css/: base.css  branding.css
locale/de/LC_MESSAGES/: django.po
manager/: admin.py  models.py
manager/migrations/: 0001_initial.py
ml_api/: api.py  base_command.py  base_result.py  client.py  connection.py  django.py  server.py  tests.py
ml_api/management/commands/: api_server.py
ml_api/models/: classifier.py  sbert.py  yolo.py
teams/: admin.py  models.py  views.py
teams/migrations/: 0001_initial.py  0002_alter_team_admins_alter_team_applications_and_more.py
text_classifier/: admin.py  forms.py  ml.py  models.py  resources.py  services.py  tasks.py  urls.py  views.py
text_classifier/migrations/: 0001_initial.py
text_classifier/static/css/: text_classifier.css
text_classifier/static/js/: predict_text.js
text_classifier/templates/admin/: base.html
text_classifier/templates/text_classifier/: base.html  correct_sample.html  prediction_form.html
text_classifier/tests/: test_ml_api.py
text_classifier/tests/data/: .~lock.train_samples.csv#  multi_labels.csv  train_samples.csv
text_tools/: admin.py  forms.py  models.py  services.py  urls.py  views.py
text_tools/migrations/: 0001_initial.py  0002_alter_textfield_task.py  0003_textfield_area_textfield_default.py  0004_tasktemplate_users.py
text_tools/templates/registration/: login.html
text_tools/templates/text_tools/: task_form.html  task_list.html  task_result.html
